web/styles.scss
body {
    background-color: white;
    font-family: sans-serif;

    @media screen {
        padding: 0 1em;
    }

    @media print {
        margin: 0;
        padding: 0;
    }
}


.spinner
{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
    overflow: hidden;
  animation: rotation 1.35s linear infinite;
}

@keyframes rotation
{
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(270deg);
  }
}

.circle
{
  stroke-dasharray: 180;
  stroke-dashoffset: 0;
  transform-origin: center;
  animation: turn 1.35s ease-in-out infinite;
}

@keyframes turn
{
  0% {
    stroke-dashoffset: 180;
  }

  50% {
    stroke-dashoffset: 45;
    transform: rotate(135deg);
  }

  100% {
    stroke-dashoffset: 180;
    transform: rotate(450deg);
  }
}
svg:nth-child(1){stroke:#2962ff;}

